Removes a refactoring after a test-run identified it as failure.